surya: overlay: Enable QR scanner shortcut in lock screen
Ref: https://blog.esper.io/android-13-deep-dive/#qr_code_shortcut

Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>

--- a/overlay/J20CFrameworks/res/values/config.xml
+++ b/overlay/J20CFrameworks/res/values/config.xml
@@ -582,4 +582,7 @@
     <!-- Whether the new Auto Selection Network UI should be shown -->
     <bool name="config_enableNewAutoSelectNetworkUI">true</bool>
 
+    <!-- Whether or not to enable the lock screen entry point for the QR code scanner. -->
+    <bool name="config_enableQrCodeScannerOnLockScreen">true</bool>
+
 </resources>
