--- a/overlay-arrow/arrow-sdk/arrow/res/res/values/config.xml
+++ b/overlay-arrow/arrow-sdk/arrow/res/res/values/config.xml
@@ -79,4 +79,13 @@
         <item>org.lineageos.aperture</item>
         <item>org.lineageos.aperture.dev</item>
     </string-array>
+
+    <!-- The list of package IDs that are not allowed to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageExcludeList" translatable="false">
+        <item>org.telegram.messenger</item>
+        <item>com.microsoft.teams</item>
+        <item>com.discord</item>
+	<item>org.thunderdog.challegram</item>
+        <item>us.zoom.videomeetings</item>
+    </string-array> 
 </resources>
