--- a/overlay/J20CSystemUI/res/values/config.xml
+++ b/overlay/J20CSystemUI/res/values/config.xml
@@ -8,4 +8,7 @@
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
 
+    <!-- Whether show refresh rate QS tile -->
+    <bool name="config_showRefreshRateQsTile">true</bool>
+
 </resources>
